# pdf2md

./: .env.example  .gitignore  README.md  pyproject.toml
pdf2md/: __init__.py  cli.py  ocr.py
scripts/: install-context-menu.sh  uninstall-context-menu.sh
